@@ -619,12 +619,7 @@ struct status_change *status_get_sc(struct block_list *bl);
 int status_isdead(struct block_list *bl);
 int status_isimmune(struct block_list *bl);
 
-int status_get_sc_def(struct block_list *bl, int type);
-#define status_get_sc_def_mdef(bl)	(status_get_sc_def(bl, SP_MDEF1))
-#define status_get_sc_def_vit(bl)	(status_get_sc_def(bl, SP_DEF2))
-#define status_get_sc_def_int(bl)	(status_get_sc_def(bl, SP_MDEF2))
-#define status_get_sc_def_luk(bl)	(status_get_sc_def(bl, SP_LUK))
-
+int status_get_sc_def(struct block_list *bl, int type, int rate, int tick, int flag);
 //Short version, receives rate in 1->100 range, and does not uses a flag setting.
 #define sc_start(bl, type, rate, val1, tick) status_change_start(bl,type,100*(rate),val1,0,0,0,tick,0)
 #define sc_start2(bl, type, rate, val1, val2, tick) status_change_start(bl,type,100*(rate),val1,val2,0,0,tick,0)
